@@ -271,9 +271,12 @@ int libfshfs_bit_stream_get_value(
 		{
 			read_number_of_bits = bit_stream->bit_buffer_size;
 		}
-		read_value_32bit   = bit_stream->bit_buffer;
-		safe_value_32bit <<= remaining_number_of_bits;
+		read_value_32bit = bit_stream->bit_buffer;
 
+		if( remaining_number_of_bits < number_of_bits )
+		{
+			safe_value_32bit <<= remaining_number_of_bits;
+		}
 		if( bit_stream->storage_type == LIBFSHFS_BIT_STREAM_STORAGE_TYPE_BYTE_BACK_TO_FRONT )
 		{
 			if( read_number_of_bits < 32 )
