@@ -1,4 +1,6 @@
 To do:
+* rename volume name to volume label ?
+
 * check if get directory entries uses previous/next node
 
 * add support for extended attribute (named fork) data stream with LIBFSHFS_ATTRIBUTE_RECORD_TYPE_EXTENTS
